Worked On the History Component

--- a/src/app/Components/navigation/navigation.component.html
+++ b/src/app/Components/navigation/navigation.component.html
@@ -45,7 +45,9 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon" style="color: #fff;">menu</mat-icon>
       </button>
-      <span class="brand">CitiKab</span>
+      <span class="brand" style="margin-top: 0.5em;">
+        <img src="../../../assets/imgs/brand-logo-white.png" alt="logo" height="22.1em"> 
+      </span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <ng-content>
