--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -22,7 +22,7 @@
     </section>
 
     <section>
-        <div class="container" fxLayoutAlign="center" fxLayoutGap="2em" fxLayout.xs="column">
+        <div class="container" fxLayoutGap="2em" fxLayout.xs="column">
             <div fxFlex="50%">
                 <mat-list>
                     <mat-list-item>
