Added different  drivers components

--- a/src/app/Components/navigation/navigation.component.html
+++ b/src/app/Components/navigation/navigation.component.html
@@ -31,6 +31,9 @@
         <mat-icon> error_outline </mat-icon> <p style="margin-left: 0.4em;"> About </p>
       </a> -->
       <a mat-list-item href="#">
+        <mat-icon> drive_eta </mat-icon> <p style="margin-left: 0.4em;">Register as a Driver</p>
+      </a>
+      <a mat-list-item href="#">
         <mat-icon> exit_to_app </mat-icon> <p style="margin-left: 0.4em;">Sign Out</p>
       </a>
     </mat-nav-list>
